tests/NormalTests/paczka1/small_fuzzy/41510885.err
Error in line 3: m3rBrOM A961 4,1
Error in line 4: m3rBrOM S509 40,6
Error in line 11: YoAeBr A961 46,2
